# hex-ttt-nn

./: .gitignore  CLAUDE.md  README.md  REVIEW.md  beat_eisenstein.py  bootstrap.py  diagnose_mcts.py  distill.py  finetune_value.py  match_h2h.py  play.py  pyproject.toml  replay_viewer.py  requirements.txt  run_bootstrap_20.py  run_bootstrap_safe.py  run_bootstrap_w6.py  smart_policy.py  tactical_nn.py  tactical_trainer.py  test_branch_limit.py  test_mcts_fix.py  test_mcts_v6.py  tournament.py  train.py
analysis/: __init__.py  opening_book.py  visualize.py
autoresearch/: experiment_log.jsonl  prepare.py  program.md  run.py  train.py
configs/: bootstrap.yaml  curriculum.yaml  curriculum_w4.yaml  ladder.yaml  ladder_w4.yaml  phase1.yaml  phase2.yaml  phase3.yaml  scaled_w4.yaml  scaled_w6.yaml
game/: __init__.py  board.py  hex_grid.py  rules.py  zobrist.py
mcts/: __init__.py  node.py  parallel.py  search.py  zoi.py
nn/: __init__.py  compat_features.py  compat_model.py  features.py  hex_conv.py  model.py  symmetry.py
training/: __init__.py  evaluator.py  reanalyze.py  replay_buffer.py  self_play.py  trainer.py
