[project]
name = "hex-ttt-nn"
version = "0.1.0"
description = "AlphaZero-style neural network for Infinite Hexagonal Tic-Tac-Toe"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.scripts]
train = "train:main"
play = "play:main"
